syntax = "proto3";

package yandex.cloud.priv.datasphere.v2;

option go_package = "datasphere";
option java_outer_classname = "Operations";
option java_package = "yandex.cloud.priv.datasphere.v2.lzy";

message Zygote {
  // TODO: return uri back
  EnvSpec env = 1;
  Provisioning provisioning = 2;
  string fuze = 3;
  repeated Slot slots = 4;
  string description = 5;
  string name = 6;
}

message ZygoteList {
  repeated Zygote zygote = 1;
}

message Slot {
  string name = 1;

  Media media = 2;
  Direction direction = 4;

  string contentType = 3;

  enum Media {
    FILE = 0;
    PIPE = 1;
    ARG = 3;
  }

  enum Direction {
    INPUT = 0;
    OUTPUT = 1;
  }
}

message SlotStatus {
  string user = 1;
  string taskId = 2;
  Slot declaration = 3;

  string connectedTo = 4;

  uint64 pointer = 5;

  State state = 6;

  /* For input slot SUSPENDED command could happen while reading to change a source of data
  * For output slot CLOSED means that process has finished generating data.
  * CLOSED and SUSPENDED are independent events: one could happen before or after the other. If CLOSED come while
  * slot is in SUSPENDED state, slot must remember this event and after reconnection feed CLOSED back to the server
  */
  enum State {
    UNBOUND = 0;
    PREPARING = 1;
    OPEN = 2;
    SUSPENDED = 3;
    CLOSED = 4;
    DESTROYED = 5;
  }
}

message EnvSpec {
  BaseEnv baseEnv = 1;
  AuxEnv auxEnv = 2;
}

message BaseEnv {
  string name = 1;
}

message AuxEnv {
  oneof env {
    PythonEnv pyenv = 1;
  }
}

message PythonEnv {
  string name = 1;
  string yaml = 2;
  repeated LocalModule localModules = 3;
}

message LocalModule {
  string name = 1;
  string uri = 2;
}

message Provisioning {
  message Tag {
    string tag = 1;
  }
  repeated Tag tags = 1;
}
